# Ai-Video-Generator-Free

Personal-Automation/: .gitignore  README.md  SETUP.md  config.yaml  generate_overnight.sh  pyproject.toml
Personal-Automation/src/vidgen/: assembly.py  captions.py  cli.py  community.py  config.py  data_overlay.py  distribution.py  imaging.py  models.py  narration.py  news_monitor.py  packaging.py  parsers.py  pipeline.py  producer.py  quality.py  queue.py  shorts.py  shorts_assembly.py  shorts_parser.py  shorts_pipeline.py  state.py  thumbnails.py  upload_package.py  utils.py
Personal-Automation/templates/: scene_plan_template.json  script_template.md
Personal-Automation/tests/: conftest.py  test_distribution.py  test_imaging_verify.py  test_models_smoke.py  test_models_validation.py  test_narration.py  test_packaging.py  test_parsers.py  test_pipeline_verify.py  test_producer.py  test_quality_smoke.py  test_queue_smoke.py  test_shorts_assembly.py  test_shorts_parser.py  test_shorts_pipeline.py  test_shorts_smoke.py  test_thumbnails.py
